# phira-mp

./: .gitignore  Cargo.toml  LICENSE  Makefile  PLUGIN_DEVELOPMENT.md  README.md  README.zh-CN.md  phira-mp-server
.github/workflows/: makefile.yml
include/: ban_manager.h  binary_protocol.h  commands.h  http_client.h  http_server.h  l10n.h  lua_bindings.h  plugin_api.h  plugin_manager.h  room.h  server.h  session.h  web_server.h
phira-mp-client/src/: lib.rs
phira-mp-common/: Cargo.toml
phira-mp-common/src/: bin.rs  command.rs  lib.rs
phira-mp-plugin/: Cargo.toml  README.md  README.zh-CN.md  build.rs
phira-mp-plugin-macros/: Cargo.toml
phira-mp-plugin-macros/src/: lib.rs
phira-mp-plugin/examples/simple_plugin/: Cargo.toml
phira-mp-plugin/examples/simple_plugin/src/: lib.rs
phira-mp-plugin/src/: api_host.rs  bindings.rs  command_system.rs  config.rs  dependency.rs  event_system.rs  hot_reload.rs  lib.rs  metadata.rs  monitoring.rs  plugin_manager.rs  sandbox.rs  server_commands.rs  wasm_runtime.rs
phira-mp-plugin/src/wit/: mod.rs  phira-mp.wit
phira-mp-server/: Cargo.toml
phira-mp-server/log/: phira-mp.2026-02-14-04
phira-mp-server/src/: cli.rs  main.rs  plugin_integration.rs  room.rs  server.rs  session.rs
plugins/admin-commands/: init.lua  plugin.json
plugins/advanced-room-management/: init.lua  plugin.json
plugins/http-admin-api/: init.lua  (+1 more)
src/: http_client.cpp  http_server.cpp  http_server.cpp.bak  http_server.cpp.bak2  l10n.cpp  lua_bindings.cpp  main.cpp  plugin_manager.cpp  room.cpp  server.cpp  session.cpp  web_server.cpp
(+6 files in other folders)
