[package]
name = "phira-mp-plugin"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
wasmtime = { version = "22.0.0", features = ["component-model"] }
wasmtime-wasi = "22.0.0"
wit-bindgen = { version = "0.24.0" }
async-trait = "0.1"
thiserror = "1.0"
lazy_static = "1.4"
parking_lot = "0.12"
arc-swap = "1.6"
dashmap = "5.5"
flume = "0.11"
regex = "1.10"
notify = "6.1"
config = "0.14"
petgraph = "0.6"

phira-mp-common = { path = "../phira-mp-common" }
phira-mp-plugin-macros = { path = "../phira-mp-plugin-macros" }

[dev-dependencies]
tempfile = "3.10"

[build-dependencies]
wit-bindgen = "0.24.0"